--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "genai": "^0.0.18"
   }
 }
